--- a/templates/newbase/theme/print.css
+++ b/templates/newbase/theme/print.css
@@ -3,7 +3,7 @@ body{
 	width:98%;
 	background-color:white;
 	font-size:12px;
-	font-family:Verdana, 'Bitstream Vera Sans', Times, serif;
+ 	font-family:"Trebuchet MS", Verdana, 'Bitstream Vera Sans', Times, serif;
 	color:black;
 }
 h1{
