{THEME} Update THeme Base - Width:75% pour le sondage dans le forum - width:auto; pour module-position dans le forum.css

--- a/templates/base/modules/forum/forum.css
+++ b/templates/base/modules/forum/forum.css
@@ -186,7 +186,7 @@ a.forum_mbrmsg_links { /* Couleur des liens pour les messages du membre */
 }
 
 .module_position{
-    
+    width:auto;
 }
 
 .module_bottom_l{ /* Barre inférieure des modules */
