--- a/wiki/templates/wiki.css
+++ b/wiki/templates/wiki.css
@@ -2,26 +2,24 @@
 {
 	width:98%;
 	margin:auto;
-	color:#E53B00;
-	font-size:14px;
+	color:#333333;
+	font-size:17px;
 	font-weight:bold;
-	margin-bottom:-15px;
 	padding:0px 5px;
-	border-bottom:2px solid #E53B00;
+	border-bottom:2px solid #336397;
 }
 .wiki_paragraph2
 {
-	display:inline;
+	display:inline-block;
 	color:#333333;
-	font-size:14px;
+	font-size:16px;
 	font-weight:bold;
 	margin-left:45px;
-	margin-bottom:45px;
-	padding:2px 5px;
+	clear:both;
 	font-weight:bold;
 	background:#FFFFFF;	
-	border:1px solid #0578CC;
-	border-top:3px solid #0578CC;
+	border-bottom:3px solid #336397;
+	border-radius:8px;
 }
 .wiki_paragraph3
 {
