{THEME} Update Theme Base - Correction du module connect - Correction des bouton (margin)

--- a/connect/templates/connect_mini.css
+++ b/connect/templates/connect_mini.css
@@ -19,7 +19,7 @@
  
 div.connect_align {
 	text-align:right;
-	margin-right:8px;
+	margin:7px 8px 0px 0px;
 }
 
 div.connect_align a {
@@ -55,3 +55,4 @@ div.connect_align a {
 .connect_vertical input#login, .connect_vertical input#password {
 	width:120px;
 }
+
