--- a/newsletter/templates/newsletter_mini.css
+++ b/newsletter/templates/newsletter_mini.css
@@ -18,20 +18,34 @@
     margin-top:3px;
     float:left;
 }
-.newsletter_text{
-    height:14px;
-    border:none;
-    border-left:1px solid #A9A9A9;
-	font-size:11px;
+.newsletter_text, .newsletter_text:hover{
+	height: 18px;
+	border-left: 2px solid #336397;
+	border-top: 1px solid #336397;
+	border-right: 2px solid #336397;
+	border-bottom: 1px solid #336397;
+	padding-left: 5px !important;
+	-moz-border-radius: 5px !important;
+	-khtml-border-radius: 5px !important;
+	-webkit-border-radius: 5px !important;
+	border-radius : 5px !important;
+	font-size: 11px;
+	background: #CCCCCC;
 }
-.newsletter_img{
-    margin-left:-4px;
+
+.newsletter_text:hover{
+	background: #DDDDDD;
+}
+
+.newsletter_img, .newsletter_img:hover{
     padding:0;
+    margin-left:-3px;
     border:none;
 	width:35px;
 	height:20px;
 	background: url('images/newsletter_submit.png') no-repeat;
 	cursor:  pointer;
+	vertical-align: top;
 }
  
 div#newsletter {
