{THEME} Update Theme Base - Modification du bouton "valider la position des menus" - Suppression de l'image

--- a/templates/default/theme/admin_default.css
+++ b/templates/default/theme/admin_default.css
@@ -47,15 +47,13 @@ Css par défaut commun à tout les thèmes, permet les ajouts nécessaires au framew
 	color:#0E2A48;
 	position:fixed;
 	z-index:101;
-	/*width:180px;*/
 	top: 75%;
-	/*bottom:5px;*/
 	right:0px;
 	margin-right:5px;
 	padding:6px;
-	border:1px solid #D6DEE7;
-	background:#F4F4F4 url(../images/check.png) top center no-repeat;
-	padding-top:48px;
+	border:1px solid #353535;
+	background:#366393;
+	border-radius:5px;
 
 }
 
