[FIX] Erreur CSS fichier content.css

--- a/templates/base/theme/content.css
+++ b/templates/base/theme/content.css
@@ -736,7 +736,7 @@ div#comment-pseudo a{
 	padding-top:4px;
 	width: 98%;
 	text-align:center;
-	vertical-align:middle;"
+	vertical-align:middle;
 }
 .comment-moderate a{
 	vertical-align:top;
