--- a/templates/default/theme/admin_default.css
+++ b/templates/default/theme/admin_default.css
@@ -21,26 +21,15 @@ Css par défaut commun à tout les thèmes, permet les ajouts nécessaires au framew
 	border:1px solid #8F8F8F;
 }
 
-
 .menu_link_element:hover {
     border-color:#aaaaaa;
     cursor:move;
 }
 
-.menu_link_element label {
-    color:#1F507F;
-}
-.menu_link_element:hover label {
-    cursor:move;
-}
-
-.menu_link_element:hover img {
-    cursor:pointer;
-}
-
-.menu_link_element:hover label {
-    cursor:pointer;
-}
+.menu_link_element label { color:#1F507F; }
+.menu_link_element:hover label { cursor:move; }
+.menu_link_element:hover img { cursor:pointer; }
+.menu_link_element:hover label { cursor:pointer; }
 
 /* Interface des menus */
 #valid_position_menus {
@@ -54,7 +43,6 @@ Css par défaut commun à tout les thèmes, permet les ajouts nécessaires au framew
 	border:1px solid #353535;
 	background:#366393;
 	border-radius:5px;
-
 }
 
 .menu_block_libelle {
@@ -112,12 +100,9 @@ Css par défaut commun à tout les thèmes, permet les ajouts nécessaires au framew
 	border-radius:3px;
 	overflow:auto;
 }
-.menus_block_top {
-	margin-bottom:5px;
-}
-.menus_block_title {
-	color:#515C68;
-}
+.menus_block_top { margin-bottom:5px; }
+.menus_block_title { color:#515C68; }
+
 .menu_spacer {
 	width:99%;
 	padding:0px 5px;
