{MODULE} Update Calendar - Mise ? jour du module Calendrier - Affichage modifier - Ajout du Num?ro de la semaine - Modification de l'affichage des evenements.
-Petite modification dans le global.css pour retirer les border du row3 quand on est dans un calendrier.

--- a/templates/base/theme/global.css
+++ b/templates/base/theme/global.css
@@ -65,6 +65,10 @@
     z-index:100;
 }
 
+.calendar_block .row3{
+	border:none;	
+}
+
 /* Déplacement des fichiers*/
 .upload_selected_cat {
     background:#f5fbff;
