[MAJ] AJout du lien vers le topic des commentaires dans la gestion des commentaires

--- a/templates/base/theme/content.css
+++ b/templates/base/theme/content.css
@@ -676,6 +676,10 @@ div#comment-rating .negative {
 	margin-left:180px;
 }
 
+.view-topic {
+	margin-top: 10px;
+}
+
 .comment-message {
 	position: relative;
 	padding: 15px;
