--- a/bugtracker/templates/bugtracker.css
+++ b/bugtracker/templates/bugtracker.css
@@ -2,8 +2,7 @@
 	margin-top:30px;		
 }
 
-.bt_current {
-	background:#2F5B8A;
+.bt_current, .bt_no_current, .bt_add {
 	-webkit-border-top-left-radius: 10px;
 	-moz-border-radius-topleft: 10px;
 	border-top-left-radius: 10px;	
@@ -13,6 +12,10 @@
 	padding:0px 10px;
 	text-align:center;
 	margin:0px 10px;
+}
+
+.bt_current {
+	background:#2F5B8A;
 }
 
 .bt_current a {
@@ -33,15 +36,6 @@ li.bt_no_current a {
 
 li.bt_no_current {
 	background:#E0E9EF;
-	-webkit-border-top-left-radius: 10px;
-	-moz-border-radius-topleft: 10px;
-	border-top-left-radius: 10px;	
-	-webkit-border-top-right-radius: 10px;
-	-moz-border-radius-topright: 10px;
-	border-top-right-radius: 10px;
-	text-align:center;
-	padding:0px 10px;
-	margin:0px 10px;
 }
 
 li.bt_no_current a:hover {
@@ -49,6 +43,17 @@ li.bt_no_current a:hover {
 }
 
 li.bt_no_current:hover {
-	background:#2F5B8A;
-	
+	background:#2F5B8A;	
+}
+
+.bt_add {
+	background:#ADCF4F;
+}
+
+.bt_add a {
+	color:#FFFFFF;
+}
+
+.bt_add a:hover {
+	text-decoration:none;
 }
