--- a/bugtracker/templates/bugtracker.css
+++ b/bugtracker/templates/bugtracker.css
@@ -8,7 +8,8 @@ div.module_top{
 /* Class générales */
 li { text-indent: 0px; }
 
-li.bt_current, li.bt_no_current, li.bt_add {
+li.bt_current, li.bt_no_current{
+	float:left;
 	-webkit-border-top-left-radius: 10px;
 	-moz-border-radius-topleft: 10px;
 	border-top-left-radius: 10px;	
@@ -18,6 +19,8 @@ li.bt_current, li.bt_no_current, li.bt_add {
 	text-align:center;
 	margin:0px 10px;
 }
+
+li.bt_add { float:right; }
 
 li.bt_current a, li.bt_no_current a, li.bt_add a{ 
 	display:block;
@@ -35,12 +38,8 @@ li.bt_current a:hover { text-decoration:none; }
 li.bt_no_current { background:#E0E9EF; }
 li.bt_no_current:hover {  background:#2F5B8A; color:#FFFFFF; }
 
-li.bt_no_current a { color:#2F5B8A; width:75px;	}
+li.bt_no_current a { color:#2F5B8A; }
 li.bt_no_current a:hover { color:#FFFFFF; }
 
 /* Lien Ajouter Bug */ 
-li.bt_add { background:#ADCF4F; }
-li.bt_add:hover { background:#2BA219;	}
-
-li.bt_add a { color:#FFFFFF; }
-li.bt_add a:hover { text-decoration:none; color:#FFFFFF; }
+li.bt_add { background:none; }
