--- a/forum/templates/forum.css
+++ b/forum/templates/forum.css
@@ -15,78 +15,75 @@ a.forum_link_pseudo:hover {
 }
 /* Barre du titre du forum */
 .forum_title_l{
-	height:60px;
-	margin-right:0px !important;
-	margin-right:-3px;
-	width:10px;
-	background:url(images/forum_top_l.png) no-repeat;
 	float:left;
+	width:5px;
+	height: 55px;
+	border-top:1px solid #D1D4DF;
+	border-left:1px solid #D1D4DF;
 }
 .forum_title_r{
-	height:60px;
-	width:10px;
-	margin-left:0px !important;
-	margin-left:-3px;
-	background:url(images/forum_top_r.png) no-repeat right;
 	float:right;
+	width:5px;
+	height: 55px;
+	border-top:1px solid #D1D4DF;
+	border-right:1px solid #D1D4DF;
 }
 .forum_title{
 	margin:auto;
 	height:55px;
-	background:url(images/forum_top.png) repeat-x;
-	color:#FFFFFF;
-	padding-top:5px;
-	margin-left:5px;
-	margin-right:5px;
+	color:#334455;
+	background:#ECEFFA;
+	border-top:1px solid #D1D4DF;
+
 }
 .forum_title h2{ /* Titre du forum */
 	font-size:14px;
 	font-weight:bold;
-	color:#FFFFFF;
+	color:#334455;
 }
 .forum_title a{ /* Couleur des liens */
-	color:#FFFFFF;
+	color:#334455;
 }
 /* Barre de liens du forum */
 .forum_links{
-	background:#5D7C94 url(images/msg_top_row.png) repeat-x;
+	color:#334455;
 	padding:6px;
-	border:2px solid #CCCCCC;
+	border: 2px solid #336397;
+	border-left:1px solid #D1D4DF;
+	border-right:1px solid #D1D4DF;
+	background:#ECEFFA;
+	
+
 }
 .forum_links a{ /* Couleur des liens */
-	color:#FFFFFF;
+	color:#334455;
 }
 .forum_notread{ /* Message non lus */
 	background:#5D7C94;
 	padding:4px;
 	font-size:10px;
-	color:#FFFFFF;
+	color:#366393;
 }
 /* Barre des textes relatifs aux colonnes */
 .forum_text_column {	
 	height:20px;
-	background:#5D7C94 url(images/msg_top_row.png) repeat-x;
-	border-bottom:1px solid #55819D;
-	font-size:10px;
+
+	font-size:11px;
 	color:#FFFFFF;	
 	text-align:center;
-	font-weight:bold;
+	background:#366393;
 }
 /* Case des liens sous-catégories */
 .forum_sous_cat{
-	background:#FFFFFF;
-	border-bottom:1px dotted #C4CED6;
+	background:#ECEFFA;
 	border-right:1px dotted #C4CED6;
 	padding:6px;
 }
-.forum_sous_cat:hover{
-	background:#EEF4F9;
-}
+
 /* Case compteur message/topic */
 .forum_sous_cat_compteur{	
 	width:60px;
-	background:#E3EDF5;
-	border-bottom:1px dotted #C4CED6;
+	background:#ECEFFA;
 	border-right:1px dotted #C4CED6;
 	color:#000000;
 	text-align:center; 
@@ -94,14 +91,10 @@ a.forum_link_pseudo:hover {
 /* Case compteur dernier topic/dernier message */
 .forum_sous_cat_last{
 	width:150px;
-	background:#FFFFFF;
-	border-bottom:1px dotted #C4CED6;
+	background:#ECEFFA;
 	font-size:10px;
 	color:#000000;
 	text-align:center; 
-}
-.forum_sous_cat_last:hover{
-	background:#EFFBFF;
 }
 
 /* Formulaire pour poster les messages */
@@ -121,9 +114,7 @@ a.forum_link_cat{
 }
 /* Affichage des membres en ligne */
 .forum_online{
-	background:#FFFFFF;
-	border:2px solid #CCCCCC;
-	color:#000000;
+	color:#334455;
 	border-top:none;
 	padding:6px;
 	overflow:hidden !important;
@@ -131,6 +122,10 @@ a.forum_link_cat{
 	overflow:visible;
 	height:1%;
 	clear:both;
+	border-bottom:1px solid #D1D4DF;
+	border-left:1px solid #D1D4DF;
+	border-right:1px solid #D1D4DF;
+	background:#ECEFFA;
 }
 /* Fond des catégories dans l'administration */
 .forum_cat_admin{
@@ -143,6 +138,8 @@ a.forum_link_cat{
 .forum_contents{
 	padding:0px;
 	margin:0px;
+	border:1px solid #D1D4DF;
+	border-bottom:none;
 }
 .forum_cat_title{
 	float:left;
@@ -155,67 +152,68 @@ a.forum_mbrmsg_links { /* Couleur des liens pour les messages du membre */
 }
 
 .module_top_l{ /* Barre supérieur des modules */
-	margin-right:0px !important;
-	margin-right:-3px;
-	width:29px;
-	height:34px;
-	background:url(images/msg_top_l.png) no-repeat left;
 	float:left;
+	width:5px;
+	height:40px;
+	border-top:1px solid #D1D4DF;
+	border-left:1px solid #D1D4DF;
+	border-bottom:1px solid #D1D4DF;
 }
 .module_top_r{
-	margin-left:0px !important;
-	margin-left:-3px;
-	width:21px;
-	height:34px;
-	background:url(images/msg_top_r.png) no-repeat right;
 	float:right;
+	width:5px;
+	height:40px;
+	border-top:1px solid #D1D4DF;
+	border-right:1px solid #D1D4DF;
+	border-bottom:1px solid #D1D4DF;
 }
 .module_top{
-	height:25px;
-	background:url(images/msg_top.png) repeat-x;
-	padding-left:6px;
-	margin-left:20px;
-	margin-right:15px;
-	padding-top:9px;
-	color:#FFFFFF;
+	height:30px;
+	padding:10px 5px 0px 5px;
+	background:#ECEFFA;
+	border-top:1px solid #D1D4DF;
+	border-bottom:1px solid #D1D4DF;
+	color:#334455;
 	font-weight:normal;
-	border-bottom:none;
+	text-indent:0px;
 }
 .module_top a{
-	color:#FFFFFF;
+	color:#334455;
+	font-size:13px;
 }
 .module_contents{ /* Contenu des modules */
-	background:#FFFFFF;
-	border-left:1px solid #CCCCCC;	
-	border-right:1px solid #CCCCCC;	
-	border-bottom:1px solid #FFFFFF;	
 	clear:both;
 }
+
 .module_bottom_l{ /* Barre inférieure des modules */
-	margin-right:0px !important;
-	margin-right:-3px;
-	width:8px;
-	height:24px;
-	background:url(images/msg_bottom_l.png) no-repeat left;
 	float:left;
+	width:5px;
+	height:25px;
+	border-top:1px solid #D1D4DF;
+	border-left:1px solid #D1D4DF;
 }
 .module_bottom_r{
-	margin-left:0px !important;
-	margin-left:-3px;
-	width:8px;
-	height:24px;
-	background:url(images/msg_bottom_r.png) no-repeat right;
 	float:right;
+	width:5px;
+	height:25px;
+	border-top:1px solid #D1D4DF;
+	border-right:1px solid #D1D4DF;
 }
 .module_bottom{
-	height:22px;
-	background:url(images/msg_bottom.png) repeat-x;
-	padding-top:2px;
-	padding-left:6px;
-	margin-left:8px !important;
-	margin-left:0px;
-	margin-right:8px !important;
-	margin-right:0px;
-	font-size:12px;
+	height:20px;
+	padding:5px 5px 0px 5px;
+	background:#ECEFFA;
+	border-bottom:1px solid #D1D4DF;
+	border-top:1px solid #D1D4DF;
+	color:#334455;
+	font-weight:normal;
+	text-indent:0px;
+}
+.module_bottom a{
+	color:#334455;
+	font-size:13px;
 }
 
+.msg_position{
+	width:94%;	
+}
