--- a/search/templates/search_mini.css
+++ b/search/templates/search_mini.css
@@ -9,7 +9,7 @@
 	border:none;
 	padding-left:23px;
 	width:96px;
-	height:21px;
+	height:22px;
 	font-size:12px;
 	color:#E9ECEF;
 }
@@ -23,7 +23,7 @@
 }
  
 .search_submit {
-	padding:0;
+	padding:0px;
 	border:none;
 	width:31px;
 	height:22px;
