--- a/templates/base/theme/content.css
+++ b/templates/base/theme/content.css
@@ -146,7 +146,7 @@ textarea {
 	-webkit-border-radius:5px;
 }
 input.text{
-	padding:0px;	
+	padding:1px 0px 1px 2px;	
 	-moz-border-radius:3px;
 	-khtml-border-radius:3px;
 	-webkit-border-radius:3px;
