--- a/templates/phpboost/modules/connect/connect_mini.css
+++ b/templates/phpboost/modules/connect/connect_mini.css
@@ -113,7 +113,7 @@ img.connect_avatar{
 .connect_align .submenu ul {
 	display: none;
 	position: absolute;
-	width:285px;
+	width:290px;
 	border-top:3px solid #2e5c35;
 	border-bottom:2px solid #99B1CB;
 	background: #353535;
@@ -144,18 +144,16 @@ img.connect_avatar{
 .connect_align .submenu ul li a:last-child { border-bottom:none; }
 
 div.welcome{
-	float:left;
-	width:217px; 
 	overflow:hidden;
 	text-align:right;
 	color:#646464;
 	font-size:10px;
 	font-style:Italic;
-	padding-top:12px;
-	margin-right:10px;
+	padding:12px 10px 0px 0px;
 }
 div.welcome a, div.welcome a:hover{
 	color:#969595;
+	text-transform : capitalize;
 	font-size:11px;
 	font-style:normal;
 	font-weight:bold;
