--- a/templates/phpboost/modules/connect/connect_mini.css
+++ b/templates/phpboost/modules/connect/connect_mini.css
@@ -1,20 +1,22 @@
 .connect_form {
-	background:url('images/form.png') no-repeat right bottom;
-	border:none;
+	background:#858585;
+	border:1px solid #727272;
+	-moz-border-radius:5px;
+	-khtml-border-radius:5px;
+	-webkit-border-radius:5px;
 	padding-left:4px;
 	padding-top:3px;
-	margin:10px 9px 0px 0px;
+	margin:10px 30px 0px 0px;
 	height:18px;
 	width:115px;
 	font-size:12px;
 	color: #E9ECEF;
-
 }
 
 
 .connect_form:hover {
-	background:url('images/form.png') no-repeat right bottom;
-	border:none;
+	background:#898989;
+	border-color:#858585;
 }
 .connect_form:focus {
 	background:url('images/form.png') no-repeat right bottom;
@@ -31,7 +33,7 @@ div.connect_align a {
 }
  
 .connect_align form {
-	text-align:right;
+	text-align:left;
 	display:inline;
 }
  
@@ -61,15 +63,19 @@ div.connect_align a {
 }
 
 
+p.auto_connect{ 
+	margin:10px 0px 5px 10px;
+	color:#969595;
+}
 
-
+p.auto_connect input.submit{ margin:0px 2px; }
 
 
 
 
 /* Ajout Thème PHPBoost */
 
-.connect_align input.submit{ margin:12px 12px 0px 0px; }
+.connect_align input.submit{ margin-left:23px; }
 
 
 .connect_align ul, .connect_align li, .connect_align a {
@@ -91,17 +97,25 @@ div.connect_align a {
   display: inline-block;
   font-size: 12px;
   height: 32px;
-  padding: 12px 12px 0px 12px;
   text-decoration: none;
 }
 .connect_align > ul > li > a:hover { font-size:12px; }
 
-.connect_align > ul > li.submenu > a { background: url('images/green.png') repeat-x; }
+.connect_align ul li {
+  color: #ffffff;
+  display: inline-block;
+  font-size: 12px;
+  height: 32px;
+  padding: 12px 12px 0px 12px;
+  text-decoration: none;
+  float: left;
+}
+
+.connect_align > ul > li.submenu { background: url('images/green.png') repeat-x; }
 
 .connect_align ul { list-style: none; }
-.connect_align > ul > li { float: left; }
 
-.connect_align .submenu {  height: 44px; z-index: 1; }
+.connect_align .submenu {  height: 32px; z-index: 200; }
 .connect_align .submenu:hover > ul { display: block; }
 .connect_align > ul > li.submenu:hover > a{ height: 32px; }
 
@@ -113,24 +127,24 @@ img.connect_avatar{
 .connect_align .submenu ul {
 	display: none;
 	position: absolute;
+	left:-72px;
+	top: 43px;
 	width:290px;
 	border-top:3px solid #2e5c35;
 	border-bottom:2px solid #99B1CB;
 	background: #353535;
 	height:133px;
+	z-index:200;
 }
 .connect_align .connect ul {
-	display:none;
-	position: absolute;
-	width:140px;
-	border-top:3px solid #2e5c35;
-	border-bottom:2px solid #99B1CB;
-	background: #353535;
-	height:110px;
+	left:0px;
+	width:187px;
+	height:135px;
 }
 
 .connect_align .submenu ul li{ 
 	padding-top:3px;
+	height: auto;
 	text-align:left; 
 }
 .connect_align .submenu ul li:last-child{ margin-top:8px; padding:5px 0px; text-align:center; border-top:1px solid #3b3b3b;}
@@ -161,7 +175,7 @@ div.welcome a, div.welcome a:hover{
 div.welcome a:hover{ color:#bbbaba; }
 
 li.disconnect, li.subscribe{ margin:0px 3px; }
-li.disconnect:hover, li.subscribe:hover{ height:41px; border-bottom:2px solid #336397; }
+li.disconnect:hover, li.subscribe:hover{ height:29px; border-bottom:2px solid #336397; }
 
 li.disconnect a, li.subscribe a { 
 	font-size:11px !important; 
