--- a/templates/base/theme/bbcode.css
+++ b/templates/base/theme/bbcode.css
@@ -31,7 +31,7 @@
 	position:absolute;
 	text-align:center;
 	padding:6px 4px;
-	background:#FFF;
+	background:#87A6BE;
 	border:1px solid #2C5169;
 	bottom:2px; 
 	z-index:100;
