--- a/templates/base/theme/content.css
+++ b/templates/base/theme/content.css
@@ -229,10 +229,10 @@ legend {
 	margin-top:-0.4em;
 	margin-left:0.5em;
 	position:relative;
+	top: -15px;
 	text-transform:none;
 	line-height:1.5em;
 	color:#333333;
-	top:0;
 	vertical-align:middle;
 	text-transform:uppercase;
 }
