{BUG} #427 - Ajout clear:both; sur le module_mini_container pour s'assurer qu'un module recommence en dessous d'un float.

--- a/templates/base/theme/content.css
+++ b/templates/base/theme/content.css
@@ -591,7 +591,7 @@ a.msg_link_pseudo:hover {
     background:#ffffff;
     border-spacing:1px;
     padding:5px;
-
+	clear:both;
 }
 
 .module_mini_top {
