[FIX] Forum et affichage des sous cat?gories

--- a/templates/base/theme/content.css
+++ b/templates/base/theme/content.css
@@ -229,7 +229,7 @@ legend {
 	margin-top:-0.4em;
 	margin-left:0.5em;
 	position:relative;
-	top: -15px;
+	top: 0;
 	text-transform:none;
 	line-height:1.5em;
 	color:#333333;
