--- a/templates/default/theme/admin_generic.css
+++ b/templates/default/theme/admin_generic.css
@@ -26,31 +26,14 @@ p { margin-bottom:0.7em; line-height:1.40em; font-size:1em; }
 /* Erreurs
 --------------------------------------*/
 #error_handler { margin:auto; }
-.error_unknow { background:#b2bc99; }
-.error_success { background:#8AC77F; }
-.error_notice { background:#ACA899; }
-.error_warning { background:#FF9900; }
-.error_fatal { background:#d92e00; }
-
-.error_unknow,.error_success,.error_notice,.error_warning,.error_fatal {
-    height:35px;
-    width:440px;
-    color:#000000;
-    border:1px solid #7C7D6A;
-    margin:auto;
-    padding:0.75em;
-    text-align:left;
-}
-
-html>body .error_unknow,html>body .error_success,html>body .error_notice,html>body .error_warning,html>body .error_fatal {
-    height:auto;
-    min-height:35px;
-}
-
-.error_handler_position {
-	margin-top:5px;
-	margin-bottom:15px;
-}
+.question{ color:#FFFFFF; background:#98c0ea url(../images/question.png) no-repeat; border:1px solid #7796b8; }
+.notice{ color:#334455; background:#dadfe5 url(../images/notice.png) no-repeat; border:1px solid #aaaeb3; }
+.warning{ color:#FFFFFF; background:#e5ad54 url(../images/important.png) no-repeat; border:1px solid #b38742; }
+.error{ color:#FFFFFF; background:#C43C35 url(../images/stop.png) no-repeat; border:1px solid #802722; }
+.success{ color:#FFFFFF; background:#57A957 url(../images/success.png) no-repeat; border:1px solid #418041; }
+.question, .notice, .warning, .error, .success{ display:block; height:35px; padding-top:4px; padding-bottom:10px; padding-left:40px; padding-right:5px; margin:4px 25px; background-position:4px 4px; border-radius:6px; }
+html>body .question, html>body .notice, html>body .warning, html>body .error, html>body .success{ height:auto; min-height:25px; }
+.error_handler_position { margin-top:5px; margin-bottom:15px; }
 
 /* phpinfo */
 h1,h2 { font-family:sans-serif; }
