--- a/BBCode/templates/bbcode.css
+++ b/BBCode/templates/bbcode.css
@@ -180,7 +180,7 @@ h4.stitle2{
 
 /*Lien vers Wikipédia*/
 a.wikipedia_link:before{
-   content:url(../images/wikipedia_icon.png);
+   content:url('/images/wikipedia_icon.png');
    vertical-align:middle;
    padding-right:2px;
 }
