--- a/templates/phpboost/modules/download/download.css
+++ b/templates/phpboost/modules/download/download.css
@@ -114,7 +114,7 @@ p.d_button_title{
 	font-size:20px;
 	margin-bottom:0px;
 }
-div.d_button_sea p.d_button_title{ color:#444444;font-size:15px; }
+div.d_button_sea p.d_button_title{ color:#444444;font-size:15px;padding-top: 9px;}
 
 p.d_button_com{
 	padding-top:2px;
